--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ nav {
     height: 60px;
 }
 
-.shinkai-label {
+.label {
     color: white;
     float: left;
     font-size: 24px;
@@ -40,7 +40,7 @@ nav {
     display: block;
     font-family: Arial, Helvetica, sans-serif;
     padding: 14px 14px;
-    margin: 5px 1px 1px;
+    margin: 5px 2px 1px;
     text-decoration: none;
 }
 
@@ -49,23 +49,35 @@ nav {
     color: black;
 }
 
-.films-sub-menu ul {
+.sub-menu ul {
     display: none;
     position: absolute;
 }
 
-.films-sub-menu:hover ul {
+.sub-menu:hover ul {
     background-color: white;
     color: black;
     display: block;
-    margin-left: 0;
-    width: 180px;    
+    margin-left: 0; 
+    width: 180px;   
 }
 
-.films-sub-menu ul li a {
+.sub-menu ul li a {
     margin: 0;
+    width: 180px;
 }
 
-.films-sub-menu ul li a:hover {
+.sub-menu ul li a:hover {
     background-color: #00ffff;
+}
+
+.sub-menu-2 .sub-menu-2-ul ul {
+    display: none;
+}
+
+.sub-menu-2:hover ul {
+    display: block;
+    position: absolute;
+    left: 211px;
+    margin-top: -50px;
 }
